k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: app
  labels:
    app: diploma-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
    spec:
      containers:
        - name: diploma-app
          image: cr.yandex/crp9drlgno3vpjn8pk1q/diploma-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
