k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diploma-app
  namespace: app
  labels:
    app: diploma-app
spec:
  selector:
    app: diploma-app
  ports:
    - name: http
      port: 80
      targetPort: http
